base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-image-index
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: vllm-image-index-proxy-tls
spec:
  selector:
    app: vllm-image-index
  ports:
  - port: 8443
    targetPort: 8443
    name: https
