base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vllm-image-index
spec:
  to:
    kind: Service
    name: vllm-image-index
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
